fix: Patch 6.5 updates

--- a/GamblePyon/GamblePyon.csproj
+++ b/GamblePyon/GamblePyon.csproj
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Authors>Pyon</Authors>
-    <Version>1.0.0.6</Version>
+    <Authors>Pyon, Incalex</Authors>
+    <Version>1.0.0.7</Version>
     <Description></Description>
   </PropertyGroup>
 
@@ -22,7 +22,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="DalamudPackager" Version="2.1.10" />
+    <PackageReference Include="DalamudPackager" Version="2.1.12" />
     <Reference Include="FFXIVClientStructs">
       <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
       <Private>false</Private>
